# cookiecutter-python-functionapp

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .funcignore  .gitignore  README.md  azure-pipelines.yml  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_slug}}/tests/: test_sample_function.py
